# Zahlen

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: ci.yaml
src/: __main__.py
src/console/: __init__.py  commands.py  core.py  defs.py  root.py  zahlen.py
src/zahlen/: core.py  defs.py  stat.py
tests/: test_console.py  test_stat.py
