[tool.poetry]
name = "zahlen"
version = "0.1.0"
description = "A python cli utility for doing math"
authors = ["Hkaar <HkaarDev@gmail.com>"]
license = "Apache 2.0 License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
